<resources>
    <string name="app_name">TodoApp</string>
    <string name="empty_text">No todos found</string>
    <string name="action_delete">Delete</string>
    <string name="update_button">Update</string>
    <string name="add_button">Add</string>
    <string name="title_description">Title</string>
    <string name="priority_description">Priority</string>
    <string name="notes_description">Notes</string>
    <string name="status_description">Status</string>
    <string name="title_hint">Workout</string>
</resources>
