<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:text="@string/title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/title_hint"
            android:inputType="text"
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="20dp"
            android:text="@string/priority_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:hint="Priority"
            android:id="@+id/todo_priority"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:paddingTop="20dp"
            android:text="@string/notes_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/todo_notes"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:paddingTop="20dp"
            android:text="@string/status_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/todo_status"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <com.andexert.library.RippleView
            app:rv_centered="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_add"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorButtonText"
                android:text="@string/add_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </com.andexert.library.RippleView>

    </LinearLayout>
</ScrollView>